--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     </div>
                 </header>
                 <div class="logo">
-                    <img src="/images/img-about.png" alt="img">
+                    <img src="images/img-about.png" alt="img">
                 </div>
                
             </div>
